# github_resume

./: .gitignore  README.md  resume.md
fintrack/: Cargo.toml  README.md
fintrack/src/: main.rs  models.rs
simple-todo/: Cargo.toml
simple-todo/src/: main.rs  models.rs
